finalized the work on the speed slider (almost). gave the menu a background color and improved the positioning of the items. prevented click events from bleeding through the menu to the underlying map.

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -245,6 +245,15 @@ h1 {
     text-transform: none;
   }
 
+  #menu {
+
+    padding: 8px;
+    background-color: #2B7CFF;
+    border-radius: 4px;
+    text-align: center;
+    align-items: center;
+  }
+
   #menu-btn-outer {
 
     background-color: #fff;
@@ -265,11 +274,18 @@ h1 {
     line-height: 38px;
   }
 
-  #speed-chooser {
+  #speed-chooser-holder-div {
 
     margin-top: 20%;
-    width: 70px;
-    height: 30px;
+    width: 100px;
+  }
+
+  #speed-chooser-display-p {
+
+    color: white;
+    font-family: Roboto,Arial,sans-serif;
+    font-size: 13px;
+    margin: 5px;
   }
 
   .slider {
